# deck

./: .gitignore  deck-tests.py  deck.py  flit.ini  pyproject.toml  readme.md
.github/workflows/: release.yml  test.yml
