[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "deck"
author = "Steve Dower"
author-email = "steve.dower@python.org"
home-page = "http://github.com/zooba/deck"
description-file = "readme.md"
requires-python= ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Public Domain",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.flit.sdist]
exclude = [".github", ".gitignore"]
